--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-    </div>
+    <button class="reset">Reset</button>
+    <div class="container"></div>
     <script src="javascript.js"></script>
 </body>
