--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <button class="reset">Reset</button>
+    <button class="chooseWidth">Choose canvas size</button>
     <div class="container"></div>
     <script src="javascript.js"></script>
 </body>
