--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <button class="reset">Reset</button>
-    <button class="chooseWidth">Choose canvas size</button>
+    <div class="btnWrapper">
+        <button class="reset">Reset</button>
+        <button class="chooseWidth">Choose canvas size</button>
+        <button>Rainbow</button>
+    </div>
     <div class="container"></div>
     <script src="javascript.js"></script>
 </body>
