Added erase button and black color button

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <div class="btnWrapper">
         <button class="reset">Reset</button>
         <button class="chooseWidth">Choose canvas size</button>
-        <button>Rainbow</button>
+        <button class="black-color">Black</button>
+        <button class="white">Erase</button>
     </div>
     <div class="container"></div>
     <script src="javascript.js"></script>
